language/move-lang/tests/move_check/typing/uninferred_type_unpack_assign.move
module 0x8675309::M {
    struct S<phantom T> {}

    fun t() {
        S{} = S{};
    }
}
